RESOLVED FIXED217574
[JSC] arguments.callee should become ThrowTypeError if function has non simple parameter list
https://bugs.webkit.org/show_bug.cgi?id=217574
Summary [JSC] arguments.callee should become ThrowTypeError if function has non simpl...
Yusuke Suzuki
Reported 2020-10-11 02:57:40 PDT
[JSC] arguments.callee should become ThrowTypeError if function has non simple parameter list
Attachments
Patch (15.89 KB, patch)
2020-10-11 02:59 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2020-10-11 02:59:03 PDT
Darin Adler
Comment 2 2020-10-11 11:00:53 PDT
Comment on attachment 411043 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=411043&action=review > Source/JavaScriptCore/parser/ParserModes.h:307 > typedef uint16_t CodeFeatures; OptionSet would make this a lot nicer.
EWS
Comment 3 2020-10-11 11:21:14 PDT
Committed r268323: <https://trac.webkit.org/changeset/268323> All reviewed patches have been landed. Closing bug and clearing flags on attachment 411043 [details].
Radar WebKit Bug Importer
Comment 4 2020-10-11 11:22:16 PDT
Alexey Shvayka
Comment 5 2020-12-11 22:24:53 PST
*** Bug 148681 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.