Source/JavaScriptCore/parser/ParserModes.h
@@ -306,22 +306,22 @@ inline bool functionNameScopeIsDynamic(bool usesEval, bool isStrictMode)
 
 typedef uint16_t CodeFeatures;
 
-const CodeFeatures NoFeatures =                       0;
-const CodeFeatures EvalFeature =                 1 << 0;
-const CodeFeatures ArgumentsFeature =            1 << 1;
-const CodeFeatures WithFeature =                 1 << 2;
-const CodeFeatures ThisFeature =                 1 << 3;
-const CodeFeatures StrictModeFeature =           1 << 4;
-const CodeFeatures ShadowsArgumentsFeature =     1 << 5;
-const CodeFeatures ArrowFunctionFeature =        1 << 6;
-const CodeFeatures ArrowFunctionContextFeature = 1 << 7;
-const CodeFeatures SuperCallFeature =            1 << 8;
-const CodeFeatures SuperPropertyFeature =        1 << 9;
-const CodeFeatures NewTargetFeature =            1 << 10;
-const CodeFeatures NoEvalCacheFeature =          1 << 11;
+const CodeFeatures NoFeatures =                         0;
+const CodeFeatures EvalFeature =                   1 << 0;
+const CodeFeatures ArgumentsFeature =              1 << 1;
+const CodeFeatures WithFeature =                   1 << 2;
+const CodeFeatures ThisFeature =                   1 << 3;
+const CodeFeatures StrictModeFeature =             1 << 4;
+const CodeFeatures ShadowsArgumentsFeature =       1 << 5;
+const CodeFeatures ArrowFunctionFeature =          1 << 6;
+const CodeFeatures ArrowFunctionContextFeature =   1 << 7;
+const CodeFeatures SuperCallFeature =              1 << 8;
+const CodeFeatures SuperPropertyFeature =          1 << 9;
+const CodeFeatures NewTargetFeature =              1 << 10;
+const CodeFeatures NoEvalCacheFeature =            1 << 11;
+const CodeFeatures NonSimpleParameterListFeature = 1 << 12;
 
-const CodeFeatures AllFeatures = EvalFeature | ArgumentsFeature | WithFeature | ThisFeature | StrictModeFeature | ShadowsArgumentsFeature | ArrowFunctionFeature | ArrowFunctionContextFeature |
-    SuperCallFeature | SuperPropertyFeature | NewTargetFeature | NoEvalCacheFeature;
+const CodeFeatures AllFeatures = EvalFeature | ArgumentsFeature | WithFeature | ThisFeature | StrictModeFeature | ShadowsArgumentsFeature | ArrowFunctionFeature | ArrowFunctionContextFeature | SuperCallFeature | SuperPropertyFeature | NewTargetFeature | NoEvalCacheFeature | NonSimpleParameterListFeature;
 
 typedef uint8_t InnerArrowFunctionCodeFeatures;
     
